--- a/src/UnpiNet/UnpiNet.csproj
+++ b/src/UnpiNet/UnpiNet.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BinarySerializer, Version=8.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BinarySerializer.8.1.3\lib\netstandard1.3\BinarySerializer.dll</HintPath>
+      <HintPath>..\..\..\src\packages\BinarySerializer.8.1.3\lib\netstandard1.3\BinarySerializer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
@@ -179,10 +179,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessageTypes.cs" />
+    <Compile Include="MessageType.cs" />
     <Compile Include="Packet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubSystems.cs" />
+    <Compile Include="SubSystem.cs" />
     <Compile Include="Unpi.cs" />
   </ItemGroup>
   <ItemGroup>
